--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="simon">
+    <meta name="author" content="Nicolas Boisvert">
     <meta http-equiv="expires" content="0">
-    <title>Elm hotloading dev environment (replaced by Elm)</title>
+    <title>Poisson</title>
   </head>
 
   <body>
